integrating left side CV and mkv support for feature extractor

--- a/vision/tools/jupyter_notebooks/Fowler_analysis-Scan3.ipynb
+++ b/vision/tools/jupyter_notebooks/Fowler_analysis-Scan3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -82,10 +82,23 @@
        " 'FOWLER_G60CLEM0_R6_S1': 108.22833101509,\n",
        " 'FOWLER_G60CLEM0_R7_S1': 0.0,\n",
        " 'FOWLER_G60CLEM0_R8_S1': 0.0,\n",
-       " 'FOWLER_G60CLEM0_R9_S1': 74.99912497575758}"
+       " 'FOWLER_G60CLEM0_R9_S1': 74.99912497575758,\n",
+       " 'FOWLER_MOVSESI0_R1_S1': 387.48192532603616,\n",
+       " 'FOWLER_MOVSESI0_R10_S1': 388.5129419654375,\n",
+       " 'FOWLER_MOVSESI0_R11_S1': 51.718932340969424,\n",
+       " 'FOWLER_MOVSESI0_R12_S1': 386.6118665229739,\n",
+       " 'FOWLER_MOVSESI0_R13_S1': 395.7663034449521,\n",
+       " 'FOWLER_MOVSESI0_R2_S1': 396.5386564774386,\n",
+       " 'FOWLER_MOVSESI0_R3_S1': 385.6531278317071,\n",
+       " 'FOWLER_MOVSESI0_R4_S1': 143.67174602371318,\n",
+       " 'FOWLER_MOVSESI0_R5_S1': 385.12268148624906,\n",
+       " 'FOWLER_MOVSESI0_R6_S1': 386.78956677722806,\n",
+       " 'FOWLER_MOVSESI0_R7_S1': 0,\n",
+       " 'FOWLER_MOVSESI0_R8_S1': 387.8325314495098,\n",
+       " 'FOWLER_MOVSESI0_R9_S1': 389.8209554916525}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -184,6 +197,8 @@
        " 'FOWLER_BLOCKAT0_R4_S1': (72925, 53252, 44602),\n",
        " 'FOWLER_BLOCKAT0_R6_S1': (81018, 59218, 49868),\n",
        " 'FOWLER_BLOCKAT0_R7_S1': (93530, 68773, 56906),\n",
+       " 'FOWLER_BLOCKAT0_R8_S1': (84392, 61019, 50955),\n",
+       " 'FOWLER_BLOCKAT0_R9_S1': (107569, 79296, 65946),\n",
        " 'FOWLER_BLOCKAX0_R1_S1': (30743, 20740, 17374),\n",
        " 'FOWLER_BLOCKAX0_R10_S1': (20406, 13254, 10841),\n",
        " 'FOWLER_BLOCKAX0_R11_S1': (27277, 19169, 16306),\n",
@@ -218,10 +233,21 @@
        " 'FOWLER_G60CLEM0_R6_S1': (4691, 3297, 2771),\n",
        " 'FOWLER_G60CLEM0_R7_S1': (31, 18, 17),\n",
        " 'FOWLER_G60CLEM0_R8_S1': (201, 116, 82),\n",
-       " 'FOWLER_G60CLEM0_R9_S1': (542, 379, 319)}"
+       " 'FOWLER_G60CLEM0_R9_S1': (542, 379, 319),\n",
+       " 'FOWLER_MOVSESI0_R1_S1': (82206, 61787, 51904),\n",
+       " 'FOWLER_MOVSESI0_R10_S1': (92944, 66675, 53823),\n",
+       " 'FOWLER_MOVSESI0_R11_S1': (824, 641, 537),\n",
+       " 'FOWLER_MOVSESI0_R13_S1': (109915, 84117, 71424),\n",
+       " 'FOWLER_MOVSESI0_R2_S1': (100959, 76337, 63795),\n",
+       " 'FOWLER_MOVSESI0_R3_S1': (81113, 59868, 50068),\n",
+       " 'FOWLER_MOVSESI0_R5_S1': (91591, 67922, 57443),\n",
+       " 'FOWLER_MOVSESI0_R6_S1': (116787, 91633, 78495),\n",
+       " 'FOWLER_MOVSESI0_R7_S1': (82224, 59676, 49578),\n",
+       " 'FOWLER_MOVSESI0_R8_S1': (98251, 74515, 62707),\n",
+       " 'FOWLER_MOVSESI0_R9_S1': (75430, 53898, 44190)}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -374,6 +400,26 @@
        "      <td>242.630196</td>\n",
        "      <td>178.406997</td>\n",
        "      <td>147.622302</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FOWLER_BLOCKAT0_R8_S1</th>\n",
+       "      <td>84392</td>\n",
+       "      <td>61019</td>\n",
+       "      <td>50955</td>\n",
+       "      <td>383.748200</td>\n",
+       "      <td>219.915038</td>\n",
+       "      <td>159.007912</td>\n",
+       "      <td>132.782382</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FOWLER_BLOCKAT0_R9_S1</th>\n",
+       "      <td>107569</td>\n",
+       "      <td>79296</td>\n",
+       "      <td>65946</td>\n",
+       "      <td>384.206655</td>\n",
+       "      <td>279.976931</td>\n",
+       "      <td>206.388929</td>\n",
+       "      <td>171.642004</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>FOWLER_BLOCKAX0_R1_S1</th>\n",
@@ -605,6 +651,96 @@
        "      <td>30.463373</td>\n",
        "      <td>25.603278</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FOWLER_MOVSESI0_R1_S1</th>\n",
+       "      <td>82206</td>\n",
+       "      <td>61787</td>\n",
+       "      <td>51904</td>\n",
+       "      <td>387.481925</td>\n",
+       "      <td>212.154412</td>\n",
+       "      <td>159.457760</td>\n",
+       "      <td>133.952055</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FOWLER_MOVSESI0_R10_S1</th>\n",
+       "      <td>92944</td>\n",
+       "      <td>66675</td>\n",
+       "      <td>53823</td>\n",
+       "      <td>388.512942</td>\n",
+       "      <td>239.230126</td>\n",
+       "      <td>171.615905</td>\n",
+       "      <td>138.535926</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FOWLER_MOVSESI0_R13_S1</th>\n",
+       "      <td>109915</td>\n",
+       "      <td>84117</td>\n",
+       "      <td>71424</td>\n",
+       "      <td>395.766303</td>\n",
+       "      <td>277.727030</td>\n",
+       "      <td>212.542097</td>\n",
+       "      <td>180.470140</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FOWLER_MOVSESI0_R2_S1</th>\n",
+       "      <td>100959</td>\n",
+       "      <td>76337</td>\n",
+       "      <td>63795</td>\n",
+       "      <td>396.538656</td>\n",
+       "      <td>254.600651</td>\n",
+       "      <td>192.508344</td>\n",
+       "      <td>160.879649</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FOWLER_MOVSESI0_R3_S1</th>\n",
+       "      <td>81113</td>\n",
+       "      <td>59868</td>\n",
+       "      <td>50068</td>\n",
+       "      <td>385.653128</td>\n",
+       "      <td>210.326312</td>\n",
+       "      <td>155.237947</td>\n",
+       "      <td>129.826511</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FOWLER_MOVSESI0_R5_S1</th>\n",
+       "      <td>91591</td>\n",
+       "      <td>67922</td>\n",
+       "      <td>57443</td>\n",
+       "      <td>385.122681</td>\n",
+       "      <td>237.822918</td>\n",
+       "      <td>176.364580</td>\n",
+       "      <td>149.155069</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FOWLER_MOVSESI0_R6_S1</th>\n",
+       "      <td>116787</td>\n",
+       "      <td>91633</td>\n",
+       "      <td>78495</td>\n",
+       "      <td>386.789567</td>\n",
+       "      <td>301.939375</td>\n",
+       "      <td>236.906597</td>\n",
+       "      <td>202.939807</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FOWLER_MOVSESI0_R8_S1</th>\n",
+       "      <td>98251</td>\n",
+       "      <td>74515</td>\n",
+       "      <td>62707</td>\n",
+       "      <td>387.832531</td>\n",
+       "      <td>253.333571</td>\n",
+       "      <td>192.131897</td>\n",
+       "      <td>161.685766</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FOWLER_MOVSESI0_R9_S1</th>\n",
+       "      <td>75430</td>\n",
+       "      <td>53898</td>\n",
+       "      <td>44190</td>\n",
+       "      <td>389.820955</td>\n",
+       "      <td>193.499090</td>\n",
+       "      <td>138.263475</td>\n",
+       "      <td>113.359734</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -619,6 +755,8 @@
        "FOWLER_BLOCKAT0_R15_S1   93630  65093  52129  385.386660     242.950807   \n",
        "FOWLER_BLOCKAT0_R6_S1    81018  59218  49868  383.366548     211.332993   \n",
        "FOWLER_BLOCKAT0_R7_S1    93530  68773  56906  385.483759     242.630196   \n",
+       "FOWLER_BLOCKAT0_R8_S1    84392  61019  50955  383.748200     219.915038   \n",
+       "FOWLER_BLOCKAT0_R9_S1   107569  79296  65946  384.206655     279.976931   \n",
        "FOWLER_BLOCKAX0_R1_S1    30743  20740  17374  382.572447      80.358636   \n",
        "FOWLER_BLOCKAX0_R10_S1   20406  13254  10841  379.795454      53.728921   \n",
        "FOWLER_BLOCKAX0_R12_S1   22619  15224  12472  367.881510      61.484471   \n",
@@ -642,6 +780,15 @@
        "FOWLER_G60CLEM0_R4_S1    25424  19060  16821  371.536727      68.429305   \n",
        "FOWLER_G60CLEM0_R5_S1    12248   8198   7026  365.766170      33.485874   \n",
        "FOWLER_G60CLEM0_R6_S1     4691   3297   2771  108.228331      43.343549   \n",
+       "FOWLER_MOVSESI0_R1_S1    82206  61787  51904  387.481925     212.154412   \n",
+       "FOWLER_MOVSESI0_R10_S1   92944  66675  53823  388.512942     239.230126   \n",
+       "FOWLER_MOVSESI0_R13_S1  109915  84117  71424  395.766303     277.727030   \n",
+       "FOWLER_MOVSESI0_R2_S1   100959  76337  63795  396.538656     254.600651   \n",
+       "FOWLER_MOVSESI0_R3_S1    81113  59868  50068  385.653128     210.326312   \n",
+       "FOWLER_MOVSESI0_R5_S1    91591  67922  57443  385.122681     237.822918   \n",
+       "FOWLER_MOVSESI0_R6_S1   116787  91633  78495  386.789567     301.939375   \n",
+       "FOWLER_MOVSESI0_R8_S1    98251  74515  62707  387.832531     253.333571   \n",
+       "FOWLER_MOVSESI0_R9_S1    75430  53898  44190  389.820955     193.499090   \n",
        "\n",
        "                        cv2_per_meter  cv3_per_meter  \n",
        "FOWLER_BLOCKAT0_R10_S1     172.531288     141.663712  \n",
@@ -652,6 +799,8 @@
        "FOWLER_BLOCKAT0_R15_S1     168.903096     135.264153  \n",
        "FOWLER_BLOCKAT0_R6_S1      154.468355     130.079164  \n",
        "FOWLER_BLOCKAT0_R7_S1      178.406997     147.622302  \n",
+       "FOWLER_BLOCKAT0_R8_S1      159.007912     132.782382  \n",
+       "FOWLER_BLOCKAT0_R9_S1      206.388929     171.642004  \n",
        "FOWLER_BLOCKAX0_R1_S1       54.211954      45.413621  \n",
        "FOWLER_BLOCKAX0_R10_S1      34.897732      28.544312  \n",
        "FOWLER_BLOCKAX0_R12_S1      41.382890      33.902220  \n",
@@ -674,10 +823,19 @@
        "FOWLER_G60CLEM0_R20_S1      35.682226      30.805989  \n",
        "FOWLER_G60CLEM0_R4_S1       51.300447      45.274124  \n",
        "FOWLER_G60CLEM0_R5_S1       22.413226      19.208994  \n",
-       "FOWLER_G60CLEM0_R6_S1       30.463373      25.603278  "
+       "FOWLER_G60CLEM0_R6_S1       30.463373      25.603278  \n",
+       "FOWLER_MOVSESI0_R1_S1      159.457760     133.952055  \n",
+       "FOWLER_MOVSESI0_R10_S1     171.615905     138.535926  \n",
+       "FOWLER_MOVSESI0_R13_S1     212.542097     180.470140  \n",
+       "FOWLER_MOVSESI0_R2_S1      192.508344     160.879649  \n",
+       "FOWLER_MOVSESI0_R3_S1      155.237947     129.826511  \n",
+       "FOWLER_MOVSESI0_R5_S1      176.364580     149.155069  \n",
+       "FOWLER_MOVSESI0_R6_S1      236.906597     202.939807  \n",
+       "FOWLER_MOVSESI0_R8_S1      192.131897     161.685766  \n",
+       "FOWLER_MOVSESI0_R9_S1      138.263475     113.359734  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,26 +852,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "planting_dist = {\"BLOCKAT0\": 3.048, \"BLOCKAX0\":3.048, 'BLOCKBT0':3.048, \"G60CLEM0\": 3.3528}"
+    "df_out.to_csv(\"/home/fruitspec-lab/Downloads/cv_res.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tangos = [\"BLOCKAT0\", \"BLOCKBT0\"]\n",
+    "planting_dist = {\"BLOCKAT0\": 3.048, \"BLOCKAX0\":3.048, 'BLOCKBT0':3.048, \"G60CLEM0\": 3.3528, \"MOVSESI0\": 3.048}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tangos = [\"BLOCKAT0\", \"BLOCKBT0\", \"MOVSESI0\"]\n",
     "clem = [\"BLOCKAX0\", \"G60CLEM0\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -772,12 +939,12 @@
        "      <td>92693.5</td>\n",
        "      <td>65490.5</td>\n",
        "      <td>52801.0</td>\n",
-       "      <td>384.98</td>\n",
+       "      <td>384.57</td>\n",
        "      <td>241.09</td>\n",
        "      <td>170.02</td>\n",
        "      <td>137.07</td>\n",
        "      <td>3.05</td>\n",
-       "      <td>126.31</td>\n",
+       "      <td>126.17</td>\n",
        "      <td>734.84</td>\n",
        "      <td>518.21</td>\n",
        "      <td>417.80</td>\n",
@@ -827,6 +994,21 @@
        "      <td>119.64</td>\n",
        "      <td>103.29</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MOVSESI0</th>\n",
+       "      <td>92944.0</td>\n",
+       "      <td>67922.0</td>\n",
+       "      <td>57443.0</td>\n",
+       "      <td>387.83</td>\n",
+       "      <td>239.23</td>\n",
+       "      <td>176.36</td>\n",
+       "      <td>149.16</td>\n",
+       "      <td>3.05</td>\n",
+       "      <td>127.24</td>\n",
+       "      <td>729.17</td>\n",
+       "      <td>537.56</td>\n",
+       "      <td>454.62</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -834,27 +1016,30 @@
       "text/plain": [
        "              cv1      cv2      cv3  row_len  cv1_per_meter  cv2_per_meter  \\\n",
        "block                                                                        \n",
-       "BLOCKAT0  92693.5  65490.5  52801.0   384.98         241.09         170.02   \n",
+       "BLOCKAT0  92693.5  65490.5  52801.0   384.57         241.09         170.02   \n",
        "BLOCKAX0  23915.0  16081.0  13335.0   380.09          63.88          42.96   \n",
        "BLOCKBT0  83797.5  53860.0  40811.0   390.12         233.90         152.74   \n",
        "G60CLEM0  18307.0  13157.0  11359.0   369.88          49.65          35.68   \n",
+       "MOVSESI0  92944.0  67922.0  57443.0   387.83         239.23         176.36   \n",
        "\n",
        "          cv3_per_meter  plant_dist  ntrees  cv1_per_tree  cv2_per_tree  \\\n",
        "block                                                                     \n",
-       "BLOCKAT0         137.07        3.05  126.31        734.84        518.21   \n",
+       "BLOCKAT0         137.07        3.05  126.17        734.84        518.21   \n",
        "BLOCKAX0          35.61        3.05  124.70        194.71        130.93   \n",
        "BLOCKBT0         115.93        3.05  127.99        712.94        465.54   \n",
        "G60CLEM0          30.81        3.35  110.32        166.46        119.64   \n",
+       "MOVSESI0         149.16        3.05  127.24        729.17        537.56   \n",
        "\n",
        "          cv3_per_tree  \n",
        "block                   \n",
        "BLOCKAT0        417.80  \n",
        "BLOCKAX0        108.55  \n",
        "BLOCKBT0        353.35  \n",
-       "G60CLEM0        103.29  "
+       "G60CLEM0        103.29  \n",
+       "MOVSESI0        454.62  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
