--- a/vision/tools/jupyter_notebooks/Motcha_analysis 23AUG23.ipynb
+++ b/vision/tools/jupyter_notebooks/Motcha_analysis 23AUG23.ipynb
@@ -2022,7 +2022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -2154,7 +2154,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# 2 sided test"
    ]
@@ -2162,7 +2164,9 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# f_df_serinal[\"base_tree_name\"] = base_tree_name\n",
@@ -2177,7 +2181,9 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "features_df[\"full_name\"] = features_df[\"block_name\"] + \"_\" + features_df[\"name\"]\n",
@@ -2204,7 +2210,9 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "df_f = features_df[~features_df[\"F\"].isna()].copy().reset_index(drop=True)\n",
@@ -2218,7 +2226,9 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "grouped_trees = df_f.groupby(\"base_tree_name\")[cv_cols + [\"F\"]].mean()\n",
@@ -2230,7 +2240,9 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -2321,7 +2333,9 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "grouped_trees[\"real_row\"] = grouped_trees[\"base_tree_name\"].apply(lambda x: x.split(\"_\")[0] + \"_\" + x.split(\"_\")[1])"
@@ -2330,7 +2344,9 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "operational_rows = {\"1_1\": \"R1\", \n",
@@ -2353,6 +2369,7 @@
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
