getting data from old branches - distortion aalysis, syngenta hue_size analysis, zed box projection
partial trees analysis notebook and code

--- a/vision/tools/jupyter_notebooks/partial trees.ipynb
+++ b/vision/tools/jupyter_notebooks/partial trees.ipynb
@@ -33,7 +33,141 @@
     "import matplotlib.pyplot as plt\n",
     "from IPython.display import display\n",
     "from vision.tools.image_stitching import plot_2_imgs\n",
-    "from vision.tools.camera import is_saturated"
+    "from vision.tools.camera import is_saturated\n",
+    "from vision.feature_extractor.stat_tools import get_mode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c97ac57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocess(frame, xyz_frame, resize_facotr, show_imgs, vndvi_filter, vari_filter, channels_thresh):\n",
+    "    org_frame = frame\n",
+    "    if resize_facotr > 1:\n",
+    "        new_shape = (frame.shape[1] // resize_facotr, frame.shape[0] // resize_facotr)\n",
+    "        frame = cv2.resize(frame, new_shape)\n",
+    "        xyz_frame = cv2.resize(xyz_frame, new_shape)\n",
+    "    else:\n",
+    "        frame, xyz_frame = np.copy(frame), np.copy(xyz_frame)\n",
+    "    gray_frame = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
+    "    flatten_frame = gray_frame.flatten()\n",
+    "    gray_mode = get_mode(flatten_frame)\n",
+    "    if show_imgs:\n",
+    "        plt.hist(flatten_frame, density = True, bins = 50)\n",
+    "        plt.title(gray_mode)\n",
+    "        plt.show()\n",
+    "    if gray_mode < 25: # Dark image\n",
+    "        vndvi_filter = vndvi_filter - 0.01\n",
+    "        vari_filter = 0\n",
+    "        channels_thresh[2] = (0, 255)\n",
+    "        channels_thresh[1] = (0, 255)\n",
+    "    return org_frame, frame, xyz_frame, vndvi_filter, vari_filter, channels_thresh\n",
+    "\n",
+    "def apply_depth_filter(frame, xyz_frame, depth_filter, show_imgs):\n",
+    "    if np.sum(depth_filter) > 0:\n",
+    "        if show_imgs:\n",
+    "            frame_pre = frame.copy()\n",
+    "        depth_chanel = xyz_frame[:,:,2]\n",
+    "        frame[depth_chanel < depth_filter[0]] = 0\n",
+    "        frame[depth_chanel > depth_filter[1]] = 0\n",
+    "        if show_imgs:\n",
+    "            plot_2_imgs(frame_pre, frame, title = \"pre depth filter,    post filter\")\n",
+    "    return frame\n",
+    "\n",
+    "def channel_filter(frame, channels_thresh, show_imgs):\n",
+    "    if show_imgs:\n",
+    "        frame_pre = frame.copy()\n",
+    "    mask = np.ones_like(frame[:,:,0], dtype=bool)\n",
+    "    for channel, thresholds in channels_thresh.items():\n",
+    "        if not np.sum(thresholds):\n",
+    "            continue\n",
+    "        chan = frame[:, :, channel]\n",
+    "        channel_mask = cv2.inRange(chan, thresholds[0], thresholds[1])\n",
+    "        mask = np.bitwise_and(mask, channel_mask)\n",
+    "    frame[np.where(mask==0)] = 0\n",
+    "    if show_imgs:\n",
+    "        plot_2_imgs(frame_pre, frame, title=\"prefilter channel, post filter\")\n",
+    "    return frame\n",
+    "\n",
+    "def gmr_filter(gree_minus_red_thres, frame, show_imgs):\n",
+    "    if np.sum(gree_minus_red_thres) != 0:\n",
+    "        diff = frame[:, :, 1] - frame[:, :, 0]\n",
+    "        valids = cv2.inRange(diff, gree_minus_red_thres[0], gree_minus_red_thres[1])\n",
+    "        if show_imgs:\n",
+    "            frame_pre = frame.copy()\n",
+    "        frame[np.where(valids==0)] = 0\n",
+    "        if show_imgs:\n",
+    "            plot_2_imgs(frame_pre, frame, title = \"prefilter g minus r,    post filter\")\n",
+    "    return frame\n",
+    "\n",
+    "def gmb_filter(gree_minus_blue_thres, frame, show_imgs):\n",
+    "    if np.sum(gree_minus_blue_thres) !=0:\n",
+    "        diff = frame[:, :, 1] - frame[:, :, 2]\n",
+    "        valids = cv2.inRange(diff, gree_minus_blue_thres[0], gree_minus_blue_thres[1])\n",
+    "        if show_imgs:\n",
+    "            frame_pre = frame.copy()\n",
+    "        frame[np.where(valids==0)] = 0\n",
+    "        if show_imgs:\n",
+    "            plot_2_imgs(frame_pre, frame, title = \"prefilter g minus b,    post filter\")\n",
+    "    return frame\n",
+    "\n",
+    "def apply_vari_filter(frame, Red, Green, Blue, vari_filter, show_imgs):\n",
+    "    vari = num_deno_nan_divide_np((Green - Red), (Green + Red - Blue))\n",
+    "    vari[~np.isfinite(vari)] = 0\n",
+    "    vari = np.clip(vari, -5,15)\n",
+    "    if show_imgs:\n",
+    "        frame_pre = frame.copy()\n",
+    "    frame_copy = frame.copy()\n",
+    "    frame_copy[vari >= vari_filter]= 0\n",
+    "    frame[-int(frame.shape[0]/4):,:] = frame_copy[-int(frame.shape[0]/4):,:]\n",
+    "    if show_imgs:\n",
+    "        plot_2_imgs(frame_pre, frame, title = \"prefilter vari,    post filter\")\n",
+    "    return frame\n",
+    "\n",
+    "def apply_vndvi_filter(frame, Red, Green, Blue, vari_filter, vndvi_filter, show_imgs):\n",
+    "    vndvi = 0.5268 * (Red**(-0.1294) * Green**(0.3389)* Blue**(-0.3118))\n",
+    "    vndvi[~np.isfinite(vndvi)] = np.nanmin(vndvi)\n",
+    "    if show_imgs:\n",
+    "        frame_pre = frame.copy()\n",
+    "    frame[vndvi <= vndvi_filter] = np.nanmin(vndvi)\n",
+    "    if show_imgs:\n",
+    "        plot_2_imgs(frame_pre, frame, title = \"prefilter vndvi,    post filter\")\n",
+    "    return frame\n",
+    "\n",
+    "def show_vi_filter_res(org_frame, vari_filter, vndvi_filter):\n",
+    "    Red, Green, Blue = org_frame[:,:,0], org_frame[:,:,1], org_frame[:,:,2]\n",
+    "    vari = num_deno_nan_divide_np((Green - Red), (Green + Red - Blue))\n",
+    "    vari[~np.isfinite(vari)] = 0\n",
+    "    vari = np.clip(vari, -5,10)   \n",
+    "    vndvi = 0.5268 * (Red**(-0.1294) * Green**(0.3389)* Blue**(-0.3118))\n",
+    "    vndvi[~np.isfinite(vndvi)] = np.nanmin(vndvi)\n",
+    "    print(np.nanquantile(vndvi, 0.025), np.nanquantile(vndvi, 0.975))\n",
+    "    plt.hist(vndvi.flatten(), bins = 50)\n",
+    "    plt.show()\n",
+    "    plot_2_imgs(vari, np.clip(vndvi, np.nanquantile(vndvi, 0.025), np.nanquantile(vndvi, 0.975)), title = \"vari,    ndvi\")\n",
+    "    plot_2_imgs(vari < vari_filter, vndvi > vndvi_filter, title = \"vari filtered,    ndvi filtred\")\n",
+    "    \n",
+    "def debug_func(frame, Red, Green, Blue):\n",
+    "    vndvi = 0.5268 * (Red**(-0.1294) * Green**(0.3389)* Blue**(-0.3118))\n",
+    "    vari = num_deno_nan_divide_np((Green - Red), (Green + Red - Blue))\n",
+    "    vndvi[~np.isfinite(vndvi)] = np.nanmin(vndvi)\n",
+    "    plot_2_imgs(vari, vndvi, title = \"Vari, vNDVI\")\n",
+    "    plot_2_imgs(vari > 0, vndvi > 0, title = \"Vari, vNDVI\")\n",
+    "    plot_2_imgs(vari > 1, vndvi > 0.3, title = \"Vari, vNDVI\")\n",
+    "    plot_2_imgs(vari > 2, vndvi > 0.31, title = \"Vari, vNDVI\")\n",
+    "    plot_2_imgs(vari > 3, vndvi > 0.32, title = \"Vari, vNDVI\")\n",
+    "    plot_2_imgs(vndvi > 0.35, vndvi > 0.33, title = \"vNDVI>0.35, vNDVI>0.33\")\n",
+    "    plot_2_imgs(vari > 4.5, vndvi > 0.34, title = \"Vari, vNDVI\")\n",
+    "    plot_2_imgs(vari >5, vndvi > 0.35, title = \"Vari, vNDVI\")\n",
+    "    plot_2_imgs(frame[:,:,0] - frame[:,:,2], frame[:,:,2] - frame[:,:,0])\n",
+    "    plot_2_imgs(frame[:,:,1] - frame[:,:,0], frame[:,:,1] - frame[:,:,2])\n",
+    "    plot_2_imgs(frame[:,:,1] - frame[:,:,0]>10, frame[:,:,1] - frame[:,:,2]>10)\n",
+    "    plot_2_imgs(frame[:,:,1] - frame[:,:,0]>50, frame[:,:,1] - frame[:,:,2]>50)\n",
+    "    plot_2_imgs(frame[:,:,1] - frame[:,:,0]>150, frame[:,:,1] - frame[:,:,2]>150)\n",
+    "    plot_2_imgs(frame[:,:,1] - frame[:,:,0]>250, frame[:,:,1] - frame[:,:,2]>250)"
    ]
   },
   {
@@ -46,7 +180,7 @@
     "# {0: (0, 100), 1: (25, 255), 2: (0, 150)},\n",
     "def thresh_channels(frame, xyz_frame, channels_thresh={0: (0, 175), 1: (10, 255), 2: (0, 200)},\n",
     "                    gree_minus_red_thres=(0, 0), gree_minus_blue_thres=(0, 0), vari_filter = 5, vndvi_filter = 0.35,\n",
-    "                    depth_filter = (1, 5),show_imgs=False):\n",
+    "                    depth_filter = (1, 5),show_imgs=False, resize_facotr = 4):\n",
     "    \"\"\"\n",
     "    Thresholds the input frame based on the given channel thresholds and green minus red thresholds.\n",
     "\n",
@@ -59,106 +193,37 @@
     "        ndarray: The thresholded frame.\n",
     "\n",
     "    \"\"\"\n",
-    "    frame = np.copy(frame)\n",
-    "    if np.sum(depth_filter) > 0:\n",
-    "        if show_imgs:\n",
-    "            frame_pre = frame.copy()\n",
-    "        frame[xyz_frame[:,:,2] < depth_filter[0]] = 0\n",
-    "        frame[xyz_frame[:,:,2] > depth_filter[1]] = 0\n",
-    "        if show_imgs:\n",
-    "            plot_2_imgs(frame_pre, frame, title = \"pre depth filter,    post filter\")        \n",
+    "    org_frame, frame, xyz_frame, vndvi_filter, vari_filter, channels_thresh = preprocess(frame, xyz_frame, \n",
+    "                                                                              resize_facotr, show_imgs,\n",
+    "                                                                              vndvi_filter, vari_filter, \n",
+    "                                                                              channels_thresh)\n",
+    "    frame = apply_depth_filter(frame, xyz_frame, depth_filter, show_imgs)\n",
     "    if vari_filter + vndvi_filter > 0:\n",
     "        Red, Green, Blue = frame[:,:,0], frame[:,:,1], frame[:,:,2]\n",
     "#     if show_imgs:\n",
-    "#         vndvi[~np.isfinite(vndvi)] = np.nanmin(vndvi)\n",
-    "#         plot_2_imgs(vari, vndvi, title = \"Vari, vNDVI\")\n",
-    "#         plot_2_imgs(vari > 0, vndvi > 0, title = \"Vari, vNDVI\")\n",
-    "#         plot_2_imgs(vari > 1, vndvi > 0.3, title = \"Vari, vNDVI\")\n",
-    "#         plot_2_imgs(vari > 2, vndvi > 0.31, title = \"Vari, vNDVI\")\n",
-    "#         plot_2_imgs(vari > 3, vndvi > 0.32, title = \"Vari, vNDVI\")\n",
-    "#         plot_2_imgs(vndvi > 0.35, vndvi > 0.33, title = \"vNDVI>0.35, vNDVI>0.33\")\n",
-    "#         plot_2_imgs(vari > 4.5, vndvi > 0.34, title = \"Vari, vNDVI\")\n",
-    "#         plot_2_imgs(vari >5, vndvi > 0.35, title = \"Vari, vNDVI\")\n",
-    "#         plot_2_imgs(frame[:,:,0] - frame[:,:,2], frame[:,:,2] - frame[:,:,0])\n",
-    "#         plot_2_imgs(frame[:,:,1] - frame[:,:,0], frame[:,:,1] - frame[:,:,2])\n",
-    "#         plot_2_imgs(frame[:,:,1] - frame[:,:,0]>10, frame[:,:,1] - frame[:,:,2]>10)\n",
-    "#         plot_2_imgs(frame[:,:,1] - frame[:,:,0]>50, frame[:,:,1] - frame[:,:,2]>50)\n",
-    "#         plot_2_imgs(frame[:,:,1] - frame[:,:,0]>150, frame[:,:,1] - frame[:,:,2]>150)\n",
-    "#         plot_2_imgs(frame[:,:,1] - frame[:,:,0]>250, frame[:,:,1] - frame[:,:,2]>250)\n",
-    "    for channel, thresholds in channels_thresh.items():\n",
-    "        if not np.sum(thresholds):\n",
-    "            continue\n",
-    "        chan = frame[:, :, channel]\n",
-    "        valids = cv2.inRange(chan, thresholds[0], thresholds[1])\n",
-    "        frame[np.where(valids==0)] = 0\n",
-    "\n",
-    "    if np.sum(gree_minus_red_thres) != 0:\n",
-    "        diff = frame[:, :, 1] - frame[:, :, 0]\n",
-    "        valids = cv2.inRange(diff, gree_minus_red_thres[0], gree_minus_red_thres[1])\n",
-    "        if show_imgs:\n",
-    "            frame_pre = frame.copy()\n",
-    "        frame[np.where(valids==0)] = 0\n",
-    "        if show_imgs:\n",
-    "            plot_2_imgs(frame_pre, frame, title = \"prefilter g minus r,    post filter\")\n",
-    "            \n",
-    "    if np.sum(gree_minus_blue_thres) !=0:\n",
-    "        diff = frame[:, :, 1] - frame[:, :, 2]\n",
-    "        valids = cv2.inRange(diff, gree_minus_blue_thres[0], gree_minus_blue_thres[1])\n",
-    "        if show_imgs:\n",
-    "            frame_pre = frame.copy()\n",
-    "        frame[np.where(valids==0)] = 0\n",
-    "        if show_imgs:\n",
-    "            plot_2_imgs(frame_pre, frame, title = \"prefilter g minus b,    post filter\")\n",
+    "#         debug_func(frame, Red, Green, Blue)\n",
     "    \n",
+    "    frame = channel_filter(frame, channels_thresh, show_imgs)\n",
+    "    frame = gmr_filter(gree_minus_red_thres, frame, show_imgs)\n",
+    "    frame = gmb_filter(gree_minus_blue_thres, frame, show_imgs)\n",
     "    if vari_filter > 0:\n",
-    "        vari = num_deno_nan_divide_np((Green - Red), (Green + Red - Blue))\n",
-    "        vari[~np.isfinite(vari)] = 0\n",
-    "        vari = np.clip(vari, -5,5)\n",
-    "        if show_imgs:\n",
-    "            frame_pre = frame.copy()\n",
-    "        frame_copy = frame.copy()\n",
-    "        frame_copy[vari >= vari_filter]= 0\n",
-    "        frame[-int(frame.shape[0]/4):,:] = frame_copy[-int(frame.shape[0]/4):,:]\n",
-    "        if show_imgs:\n",
-    "            plot_2_imgs(frame_pre, frame, title = \"prefilter vari,    post filter\")\n",
-    "            \n",
+    "        frame = apply_vari_filter(frame, Red, Green, Blue, vari_filter, show_imgs)\n",
     "    if vndvi_filter > 0:\n",
-    "        vndvi = 0.5268 * (Red**(-0.1294) * Green**(0.3389)* Blue**(-0.3118))\n",
-    "        if show_imgs:\n",
-    "            frame_pre = frame.copy()\n",
-    "        frame[vndvi <= vndvi_filter] = 0\n",
-    "        if show_imgs:\n",
-    "            plot_2_imgs(frame_pre, frame, title = \"prefilter vndvi,    post filter\")\n",
-    "            \n",
+    "        frame = apply_vndvi_filter(frame, Red, Green, Blue, vari_filter, vndvi_filter, show_imgs)\n",
     "    if show_imgs:\n",
-    "        if not vari_filter:\n",
-    "            vari = num_deno_nan_divide_np((Green - Red), (Green + Red - Blue))\n",
-    "            vari[~np.isfinite(vari)] = 0\n",
-    "            vari = np.clip(vari, -5,5)   \n",
-    "        if not vndvi_filter:\n",
-    "            vndvi = 0.5268 * (Red**(-0.1294) * Green**(0.3389)* Blue**(-0.3118))\n",
-    "        plot_2_imgs(vari < vari_filter, vndvi > vndvi_filter, title = \"vari filtered,    ndvi filtred\")\n",
+    "        show_vi_filter_res(org_frame, vari_filter, vndvi_filter)\n",
     "    return cv2.threshold(frame[:, :, 1], 0, 255, cv2.THRESH_BINARY)[1] > 0\n",
     "\n",
     "\n",
-    "def get_percent_seen(zed_frame, xyz_frame, coors, return_threshed=False, show_imgs=False):\n",
-    "    \"\"\"\n",
-    "    Calculates the percent of the frame that is covered by the input coordinates.\n",
-    "\n",
-    "    Args:\n",
-    "        zed_frame (ndarray): The input frame.\n",
-    "        coors (tuple): A tuple of coordinates (x1, y1, x2, y2) to exclude from the calculation.\n",
-    "\n",
-    "    Returns:\n",
-    "        float: The percent of the frame that is covered by the input coordinates.\n",
-    "    \"\"\"\n",
-    "    x1, y1, x2, y2 = coors\n",
-    "    zed_threshed = thresh_channels(zed_frame, xyz_frame, show_imgs=show_imgs)\n",
+    "def get_percent_seen(zed_frame, xyz_frame, coors, return_threshed=False, show_imgs=False, resize_facotr=4):\n",
+    "    x1, y1, x2, y2 = [cor//resize_facotr for cor in coors]\n",
+    "    zed_threshed = thresh_channels(zed_frame, xyz_frame, show_imgs=show_imgs, resize_facotr=resize_facotr)\n",
     "    zed_threshed_cut = zed_threshed[:, x1:x2]\n",
-    "    percent_seen = round(np.sum(zed_threshed_cut[y1:y2, :])/np.sum(zed_threshed_cut),2)\n",
+    "    percent_seen = round(np.nansum(zed_threshed_cut[y1:y2, :])/np.nansum(zed_threshed_cut),2)\n",
+    "    percent_seen_top = round(np.nansum(zed_threshed_cut[y1:y2, :])/np.nansum(zed_threshed_cut[:y2,:]),2)\n",
     "    if return_threshed:\n",
-    "        return percent_seen, zed_threshed_cut\n",
-    "    return percent_seen\n",
+    "        return percent_seen, percent_seen_top, zed_threshed_cut\n",
+    "    return percent_seen, percent_seen_top\n",
     "\n",
     "def debug_percent_seen_batch(batch_fsi, batch_rgb_zed, batch_zed, frame_ids, b_align):\n",
     "    for jai, zed, zed_xyz, f_id, cors in zip(batch_fsi, batch_rgb_zed, batch_zed, frame_ids, b_align):\n",
@@ -167,10 +232,10 @@
     "        zed_copy = zed.copy()\n",
     "        color = (0, 0, 255)\n",
     "        thickness = 2\n",
-    "        percent_seen, zed_threshed = get_percent_seen(zed_copy, zed_xyz, cors[:4], True, True)\n",
+    "        percent_seen, percent_seen_top, zed_threshed = get_percent_seen(zed_copy, zed_xyz, cors[:4], True, False)\n",
     "        cv2.rectangle(zed_copy, (x1, y1), (x2, y2), color, thickness)\n",
     "        plot_2_imgs(jai, zed_copy, title=f_id, save_to=\"\", save_only=False, cv2_save=False, quick_save=False)\n",
-    "        plot_2_imgs(zed_threshed, zed_copy, title=f\"frame: {f_id}, percent: {percent_seen}\",\n",
+    "        plot_2_imgs(zed_threshed, zed_copy, title=f\"frame: {f_id}, percent: {percent_seen}, percent_top: {percent_seen_top}\",\n",
     "                    save_to=\"\", save_only=False, cv2_save=False, quick_save=False)\n"
    ]
   },
@@ -215,7 +280,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "69db3514",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "os.chdir(new_directory)\n",
@@ -228,7 +295,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "364d7cc5",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "row_scan_path = \"/media/fruitspec-lab/cam175/customers_new/MOTCHA/ORSCHIST/230813/row_6/1\"\n",
@@ -239,20 +308,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "625bc107",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "row_scan_path = \"/media/fruitspec-lab/cam175/customers_new/MOTCHA/MICHAL22/240723/row_102/2\"\n",
-    "frames = [str(num) for num in range(200,209)]\n",
-    "run_on_row(row_scan_path, min_slice_len, \"right\", tree_id, frames, shift)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "92eb9a24",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "row_scan_path = \"/media/fruitspec-lab/cam175/customers_new/MOTCHA/RAUSTENB/060723/row_2/1\"\n",
@@ -264,7 +323,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "cf5645e6",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "row_scan_path = \"/media/fruitspec-lab/cam175/customers_new/MOTCHA/MEIRAVHA/230723/row_101/1\"\n",
@@ -276,7 +337,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5b07e33f",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "row_scan_path = \"/media/fruitspec-lab/cam175/customers_new/PROPAL/M7XXXXXX/250323/row_23/1\"\n",
@@ -289,7 +352,7 @@
    "execution_count": null,
    "id": "b3b5a9a4",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -302,11 +365,27 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "42c68382",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "row_scan_path = \"/media/fruitspec-lab/cam175/customers_new/PROPAL/2018XXXX/230323/row_62/1\"\n",
     "frames = [str(num) for num in range(1500, 1509)]\n",
+    "run_on_row(row_scan_path, min_slice_len, \"right\", tree_id, frames, shift)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "122f9fa6",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "row_scan_path = \"/media/fruitspec-lab/cam175/customers_new/MOTCHA/MICHAL22/240723/row_102/2\"\n",
+    "frames = [str(num) for num in range(200,209)]\n",
     "run_on_row(row_scan_path, min_slice_len, \"right\", tree_id, frames, shift)"
    ]
   }
