results_collector - mode
adts_loader - percent seen

fe_pipline - direction from metadata

feature_extractor_class - percent seen

percent_seen -floor segmentation

--- a/vision/tools/jupyter_notebooks/Fowler_analysis-Scan3.ipynb
+++ b/vision/tools/jupyter_notebooks/Fowler_analysis-Scan3.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "import importlib\n",
     "importlib.reload(notebook_analysis_help_funcs)\n",
-    "from vision.misc.notebook_analysis_help_funcs import *"
+    "from vision.tools.jupyter_notebooks.notebook_analysis_help_funcs import *"
    ]
   },
   {
